Login e Registro na API usando JWT
