# formatador-back/app/Models/User.php
@@ -7,8 +7,11 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
+use Tymon\JWTAuth\Contracts\JWTSubject;
+use JWTAuth;
+use Tymon\JWTAuth\Exceptions\JWTException;
 
-class User extends Authenticatable
+class User extends Authenticatable implements JWTSubject
 {
     use HasApiTokens, HasFactory, Notifiable;
 
@@ -42,4 +45,37 @@ class User extends Authenticatable
     protected $casts = [
         'email_verified_at' => 'datetime',
     ];
+
+    // public function create($fields) {
+    //     return parent::create([
+    //         'name' => $fields['name'],
+    //         'email' => $fields['email'],
+    //         'password' => Hash::make($fields['password']),
+    //     ]);
+    // }
+
+    public function login($credentials){
+        if (!$token = JWTAuth::attempt($credentials)) {
+          throw new \Exception('Credencias incorretas, verifique-as e tente novamente.', -404);
+        }
+        return $token;
+    }
+
+    public function logout($token) {
+        if (!JWTAuth::invalidate($token)) {
+            throw new \Exception('Erro. Tente novamente.', -404);
+        }
+    }
+
+    public function getJWTIdentifier()
+    {
+        return $this->getKey();
+    }
+      
+    public function getJWTCustomClaims()
+    {
+        return [];
+    }
+      
+
 }
